Fix long textareas appearing collapsed with scrollbar on their edit forms

--- a/app/assets/stylesheets/api/posts.scss
+++ b/app/assets/stylesheets/api/posts.scss
@@ -20,7 +20,7 @@
   top: 0;
   bottom: 0;
   right: 0;
-  left: 15px;
+  left: 0;
   background: rgba(0, 0, 0, 0.7);
   z-index: 10;
 }
@@ -28,6 +28,6 @@
 .modal-child {
   position: absolute;
   top: 50%;
-  left: 50%;
+  left: 50.45%;
   transform: translate(-50%, -50%);
 }
